[project]
name = "chirp-waitlist"
version = "0.1.1"
description = "A one-click referral waitlist and launch desk powered by Chirp and PostgreSQL"
requires-python = ">=3.14"
dependencies = [
  "bengal-chirp[data-pg,sessions]>=0.10,<0.11",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.0",
  "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "issue(number): GitHub issue acceptance traceability",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
